fixed line height & font size, solved nav bar overflow issue

--- a/src/components/bubblestyle.css
+++ b/src/components/bubblestyle.css
@@ -1,5 +1,5 @@
 .title {
-  background: linear-gradient(90deg, #f5bc1f 0%, #2d7fdb 100%);
+  background: linear-gradient(90deg, #094486 0%, #2d7fdb 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
